# Londri-Mobi

./: .gitignore  pyproject.toml
londri_mobi_bike/: db.sqlite3  manage.py
londri_mobi_bike/londri_mobi_bike/: asgi.py  settings.py  urls.py  wsgi.py
londri_mobi_bike/map/: models.py  urls.py  views.py
londri_mobi_bike/map/migrations/: 0001_initial.py  0002_rename_login_registeruser.py  0003_alter_registeruser_email_alter_registeruser_name.py  0004_bikerent_registeruser_rent_bike.py  0005_alter_bikerent_qntd_alter_registeruser_rent_bike.py  0006_bikerent_hour.py  0007_remove_bikerent_hour_registeruser_hour.py  0008_bikestation_rent_delete_bikerent_and_more.py  0009_alter_registeruser_name.py
londri_mobi_bike/map/static/map/css/: index.css  login.css  register.css  rent.css
londri_mobi_bike/map/static/map/js/: index.js  login.js  register.js
londri_mobi_bike/map/templates/map/: index.html  login.html  register.html  rent.html
