[tool.poetry]
name = "londri-mobi"
version = "0.1.0"
description = ""
authors = ["Alexander Ueno <alexander.ueno@edu.unifil.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
folium = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
